# jk-mcp-ecnl

./: .dockerignore  .gitignore  .semantic-release.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  tasks.py
.github/workflows/: badge.yml  ci.yml  evals.yml  release.yml
docs/: quickstart.md
docs/decisions/: 0001-data-source-athleteone-api.md
src/ecnl/: server.py
src/ecnl/adapters/inbound/: authorization.py  formatters.py  mcp_adapter.py
src/ecnl/adapters/inbound/tools/: _base.py  analytics.py  events.py  matches.py  schedule.py  standings.py  teams.py
src/ecnl/adapters/outbound/: athleteone_adapter.py  athleteone_parsers.py  caching_adapter.py  discovery.py  retry_adapter.py
src/ecnl/application/: _rpi.py  service.py
src/ecnl/domain/: classification.py  exceptions.py  models.py
src/ecnl/observability/: __init__.py  tracing.py
src/ecnl/ports/: outbound.py
src/ecnl/security/: __init__.py  token_verifier.py
tests/: conftest.py  test_athleteone_adapter.py  test_authorization.py  test_classification.py  test_discovery.py  test_dispatch_authorized.py  test_eval_judge.py  test_formatters.py  test_rpi.py  test_server.py  test_service.py  test_token_verifier.py  test_tool_annotations.py  test_tools.py  test_tracing.py  test_wrappers.py
tests/bdd/features/: standings.feature
tests/bdd/step_defs/: test_standings_steps.py
tests/evals/: __init__.py  conftest.py  test_scenarios.py
tests/evals/scenarios/: clubs_for_event.yaml  find_events_basic.yaml
