[project]
name = "jk-mcp-ecnl"
version = "0"
description = "MCP server for ECNL/ECRL youth soccer schedules, standings, and RPI via the Total Global Sports / AthleteOne public API"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
jk-mcp-ecnl = "ecnl.server:main"

[dependency-groups]
dev = [
    "invoke>=2.2",
    "py-cyclo",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-bdd>=7.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tests/bdd"]
pythonpath = ["src"]
markers = ["smoke: critical path tests for quick validation", "bdd: integration tests"]

[tool.coverage.report]
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/ecnl"]
